# chatgpt-tui

./: .gitignore  Cargo.toml  flake.nix  rustfmt.toml  shell.nix
src/: main.rs
