[package]
name = "chatgpt-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = { version = "1.1.6", features = ["streams"] }
# chatgpt_rs = { path = "../chatgpt_rs", version = "1.1.4", features = ["streams"] }
chrono = "0.4.23"
textwrap = "0.16"
ratatui = { version = "0.20.1", features = ["crossterm"] }
termimad = "0.23.0"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.26"
futures = "0.3"
crossterm = { version = "0.26", features = ["event-stream"] }
ropey = "1.6"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
toml = "0.7.3"
# clap = { version = "4.2.5", features = ["derive"] }
